adicionado img contendo minha foto de perfil ao arquivo index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio Web</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Matías Ezequiel Mendoza</h1>
+    <img src="profile.jpg" alt="Minha foto de perfil" width="250px" />
+  </body>
 </html>
