adicionado conteúdo ao arquivo index.html contendo novas informações sobre mim

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <body>
     <h1>Matías Ezequiel Mendoza</h1>
     <img src="profile.jpg" alt="Minha foto de perfil" width="250px" />
+    <p>
+      Estudante de desenvolvimento Web na Trybe, tenho 24 anos, sou argentino,
+      mas moro no Brasil desde meus 8 anos!
+    </p>
+    <p>Atualmente moro em Jaraguá do Sul - SC</p>
   </body>
 </html>
