adicionado no arquivo index.html as habilidades das quais mais tenho orgulho

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
       mas moro no Brasil desde meus 8 anos!
     </p>
     <p>Atualmente moro em Jaraguá do Sul - SC</p>
+    <h3>Habilidades que mais me orgulho</h3>
+    <ul>
+      <li>Empatia</li>
+      <li>Trabalho em equipe</li>
+      <li>Flexibilidade</li>
+    </ul>
   </body>
 </html>
