adicionado conteúdo ref. o que mais gosto de fazer e também tag a para quando clicar em Trybe abrir site da Trybe em nova aba

--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <title>Portfólio Web</title>
   </head>
   <body>
-    <h1>Matías Ezequiel Mendoza</h1>
-    <img src="profile.jpg" alt="Minha foto de perfil" width="250px" />
+    <h2>Matías Ezequiel Mendoza</h2>
+    <img
+      id="fotoPerfil"
+      src="profile.jpg"
+      alt="Minha foto de perfil"
+      width="250px"
+    />
     <p>
-      Estudante de desenvolvimento Web na Trybe, tenho 24 anos, sou argentino,
-      mas moro no Brasil desde meus 8 anos!
+      <strong
+        >Estudante de desenvolvimento Web na
+        <a href="https://www.betrybe.com/" target="_blank">Trybe</a></strong
+      >, tenho 24 anos, sou argentino, mas moro no Brasil desde meus 8 anos!
     </p>
     <p>Atualmente moro em Jaraguá do Sul - SC</p>
     <h3>Habilidades que mais me orgulho</h3>
@@ -19,6 +26,13 @@
       <li>Empatia</li>
       <li>Trabalho em equipe</li>
       <li>Flexibilidade</li>
+    </ul>
+    <h4>O que mais gosto de fazer</h4>
+    <ul>
+      <li>Jogar com os amigos</li>
+      <li>Passar tempo com a família</li>
+      <li>Assistir animes, doramas, séries, filmes...</li>
+      <li>Ouvir música</li>
     </ul>
   </body>
 </html>
