adicionado indice com links internos para facilitar navegação dentro do site

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Portfólio Web</title>
   </head>
   <body>
+    <ul>
+      <li><a href="#fotoPerfil">Sobre mim</a></li>
+      <li><a href="#principaisHabilidades">Principais habilidades</a></li>
+      <li><a href="#atividadesFavoritas">O que mais gosto de fazer</a></li>
+    </ul>
     <h2>Matías Ezequiel Mendoza</h2>
     <img
       id="fotoPerfil"
@@ -22,13 +27,13 @@
     </p>
     <p>Atualmente moro em Jaraguá do Sul - SC</p>
     <h3>Habilidades que mais me orgulho</h3>
-    <ul>
+    <ul id="principaisHabilidades">
       <li>Empatia</li>
       <li>Trabalho em equipe</li>
       <li>Flexibilidade</li>
     </ul>
     <h4>O que mais gosto de fazer</h4>
-    <ul>
+    <ul id="atividadesFavoritas">
       <li>Jogar com os amigos</li>
       <li>Passar tempo com a família</li>
       <li>Assistir animes, doramas, séries, filmes...</li>
